fixed spacing on recipes

--- a/assets/scss/_recipeCard.scss
+++ b/assets/scss/_recipeCard.scss
@@ -14,14 +14,22 @@
         list-style-type: none;
     
     }
+    &__title {
+        color: $text-dark;
+    }
     &__top-container {
         padding: 1rem;
+        
     }
     &__img-container {
-        padding: 0;
+        display: flex;
+        justify-content: center;
     }
     &__img {
         width: 100%;
+        height: 15rem;
+        object-fit: cover;
+
     }
     &__top-text {
         margin: 0;
@@ -30,9 +38,11 @@
     &__name {
         font-family: "Berkshire Swash", serif;
         margin-top: 0;
+        color: $text-dark;
     }
     &__description p {
         margin: 0;
+        color: $text-dark;
     }
 
     &__bottom-container {
